# awf

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  README.md  autogen.sh  awf-gtk2.desktop  awf-gtk3.desktop  awf-gtk4.desktop  awf.c  awf.desktop  awf.spec.in  build.sh  changelog  configure.ac  fontsheet.css  index.html  layout.css
archlinux/: PKGBUILD
debian/: README.source  changelog  control  copyright  rules
icons/: Makefile.am
icons/128x128/: Makefile.am
icons/16x16/: Makefile.am
icons/22x22/: Makefile.am
icons/24x24/: Makefile.am
icons/32x32/: Makefile.am
icons/48x48/: Makefile.am
icons/64x64/: Makefile.am
icons/scalable/: Makefile.am
src/: Makefile.am  awf.c  awf.pot  gtk_empty.c  gtk_empty.h
src/fr/: awf.po
src/fr/LC_MESSAGES/: awf.mo
src/po/: awf.pot
