AC_INIT([A widget factory], [2.0.0])
AC_CONFIG_SRCDIR([src/awf.c])

AM_INIT_AUTOMAKE

AC_PROG_CC
AM_PROG_CC_C_O
#AC_PROG_INSTALL

PKG_CHECK_MODULES(GTK4, gtk4, GTK4_SUFFIX=4, GTK4_SUFFIX=0)
AM_CONDITIONAL([GTK4], [test "$GTK4_SUFFIX" -eq 4])
AC_SUBST(GTK4_CFLAGS)
AC_SUBST(GTK4_LIBS)
AC_SUBST(GTK4_SUFFIX)

PKG_CHECK_MODULES(GTK3, gtk+-3.0, GTK3_SUFFIX=3, GTK3_SUFFIX=0)
AM_CONDITIONAL([GTK3], [test "$GTK3_SUFFIX" -eq 3])
AC_SUBST(GTK3_CFLAGS)
AC_SUBST(GTK3_LIBS)
AC_SUBST(GTK3_SUFFIX)

PKG_CHECK_MODULES(GTK2, gtk+-2.0 >= 2.24, GTK2_SUFFIX=2, GTK2_SUFFIX=0)
AM_CONDITIONAL([GTK2], [test "$GTK2_SUFFIX" -eq 2])
AC_SUBST(GTK2_CFLAGS)
AC_SUBST(GTK2_LIBS)
AC_SUBST(GTK2_SUFFIX)

AC_CONFIG_FILES([
Makefile
src/Makefile
])

AC_OUTPUT
